# RustWikiWrapper

./: README.md
RustWikiWrapper/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  project.tree  run_examples.sh
RustWikiWrapper/RustWikiWrapper/Examples/: example.rs
RustWikiWrapper/RustWikiWrapper/src/api/: mod.rs
RustWikiWrapper/examples/: edit_page_eg.rs  email_a_user_eg.rs  example.rs  get_current_userinfo_eg.rs  get_page_content_eg.rs  get_page_summary_eg.rs  login_eg.rs  login_example.rs  logout_example.rs  search_eg.rs  upload_file_eg.rs
RustWikiWrapper/fuzz/: Cargo.toml
RustWikiWrapper/fuzz/fuzz_targets/: fuzz_login.rs  fuzz_send_email.rs
RustWikiWrapper/src/: lib.rs
RustWikiWrapper/src/api/: mod.rs
RustWikiWrapper/src/api/action/: create_account.rs  create_edit_page.rs  get_current_user.rs  get_page_content.rs  login.rs  logout.rs  mod.rs  send_email.rs  upload_file.rs
RustWikiWrapper/src/api/rest/: get_metadata.rs  get_page.rs  get_page_summary.rs  mod.rs  search.rs
RustWikiWrapper/src/models/: mod.rs
RustWikiWrapper/src/models/action/: create_account.rs  create_edit_page.rs  email_status.rs  login_response.rs  logout_response.rs  mod.rs  page_content.rs  upload_response.rs  user_info.rs
RustWikiWrapper/src/models/rest/: metadata.rs  mod.rs  page_summary.rs  pages.rs  search_results.rs
RustWikiWrapper/tests/: current_users_test.rs  login_tests.rs  page_contents_tests.rs  search_test.rs  send_email_test.rs
