[package]
name = "rust_wiki_wrapper-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1"
rust_wiki_wrapper = { path = "../", features = ["fuzzing"] }  # Corrected line
serde = { version = "1.0", features = ["derive"] }
http = "0.2"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false